[project]
name = "super-mario-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "sgsen",email = "sohamgsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gym-super-mario-bros (>=7.4.0,<8.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "gymnasium[classic-control] (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
