[project]
name = "super-mario-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "sgsen",email = "sohamgsen@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["gym-super-mario-bros (>=7.4.0,<8.0.0)", "pygame (>=2.6.1,<3.0.0)"]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"